Bug 32676 - The arrowheads picker can not be torn off
Summary: The arrowheads picker can not be torn off
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
3.3.0 RC2
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard:
Keywords:
: 31011 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-12-27 00:43 UTC by Yifan Jiang
Modified: 2011-01-04 11:10 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Expected behavior. (40.12 KB, image/png)
2010-12-27 00:43 UTC, Yifan Jiang
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yifan Jiang 2010-12-27 00:43:13 UTC
Created attachment 41470 [details]
Expected behavior.

Platform: SLED 11 sp1 i586
build info: LibreOffice 3.3.0.2

[Steps]

    1. Launch Libreoffice and call out Drawing toolbar

    2. Draw a Line

    3. In the Drawing Object toolbar, expand the Arrowheads button and try to
    tear off it by drag and drop the title
    
[Problem]

    The Arrowheads button now could not be torn off.

[Extra Information]

    + It is a regresssion problem against RC1

    + A snapshot for expected behavior is attached.
Comment 1 Rainer Bielefeld Retired 2010-12-27 09:48:52 UTC
[Reproducible] with "LibreOffice 3.3.0 RC2 - WIN XP German UI  [OOO330m18 (build 3.3.0.2)]".
Character Color Picker still works in the expected way, tearing the picker from it's place makes it a normal Window.
You can also tear away the Undo and Restore, and they will behave like arrow head picker, not like character color picker.
In OOo 3.4-dev undo picker can not be torn away. May be LibO here shows some "half way done" for some UI items?

Not a serious thing, IMHO

@Yifan:
Did you also see such problems in other LibO applications for app. specific pickers?
Comment 2 Yifan Jiang 2010-12-27 18:16:52 UTC
Thanks Rainer for your confirmation.

(In reply to comment #1)
> In OOo 3.4-dev undo picker can not be torn away. May be LibO here shows some
> "half way done" for some UI items?

About undo/redo picker, I didn't see the tearoff ever work previously (in 3.2.1 for example).
 
> Not a serious thing, IMHO

No, it isn't :)
 
> @Yifan:
> Did you also see such problems in other LibO applications for app. specific
> pickers?

Nope, I just found the arrow head picker has this problem.
Comment 3 Jan Holesovsky 2010-12-28 07:50:10 UTC
Fixed in master for the Arrowheads dialog, but left the behavior as is for Undo/Redo - it does not sound to me too useful to tear-off the Undo/Redo, as that it an action which you do once, and you are done with that; while of course, in the case of Arrowheads, it is useful to be able to let that open, and use several times.
Comment 4 Rainer Bielefeld Retired 2011-01-04 11:10:24 UTC
*** Bug 31011 has been marked as a duplicate of this bug. ***