Allow tear-off for the Arrowheads dialog, fdo#32676.